# self-driving-contest

./: README.md
m_car_new/: CMakeLists.txt  package.xml
m_car_new/launch/: m_car_race.launch
m_car_new/rviz/: m_car_new_odom.rviz  m_race.rviz
m_car_new/src/: race_car_control_node.cpp  teleop.py
sc_mini/: readme.txt
sc_mini/launch/: sc_mini_test.launch
sc_mini/rviz/: sc_m.rviz
vision/: CMakeLists.txt  package.xml
vision/src/: race_vision.cpp
waypoint_car_control/: CMakeLists.txt  package.xml
waypoint_car_control/src/: waypoint_race_car_control_node.cpp
waypoints_move/: CMakeLists.txt  package.xml
waypoints_move/src/: race_waypoints_navigation_node.cpp
